--- a/api/css/style.css
+++ b/api/css/style.css
@@ -13,12 +13,16 @@
 	font-size: inherit;
 }
 
- body {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-  }
+body {
+	display: flex;
+	min-height: 100vh;
+	flex-direction: column;
+}
 
-  main {
-    flex: 1 0 auto;
-  }
+main {
+	flex: 1 0 auto;
+}
+
+span.badge {
+	position: inherit;
+}
