--- a/web/templates/template.html
+++ b/web/templates/template.html
@@ -38,9 +38,11 @@
       <include href="{{ @content }}" />
     </div><!-- Container - END -->
 
-    <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script type="text/javascript" src="js/async.min.js"></script>
+    <script type="text/javascript" src="js/api.js"></script>
+    <script type="text/javascript" src="js/handlebars.js"></script>
     <repeat group="{{ @js }}" value="{{ @src }}">
       <script type="text/javascript" src="{{ @src }}"></script>
     </repeat>
