Project adding through ajax.

--- a/web/templates/projects.html
+++ b/web/templates/projects.html
@@ -12,7 +12,7 @@
 <!-- Modal Structure -->
 <div id="modal1" class="modal">
   <div class="modal-content">
-    <form action="create" method="post">
+    <form id="create" method="post">
       <h5>CREATE NEW PROJECT</h5>
       <div class="divider"></div>
       <div class="section">
