Switched api tests page to mdl.

--- a/api/css/material.style.css
+++ b/api/css/material.style.css
@@ -206,3 +206,11 @@ html, body {
 .mdl-demo .mdl-menu__container {
   z-index: 99;
 }
+
+.kv-test-table {
+  width: 100%;
+}
+
+.kv-test-child {
+  line-height: 24px;
+}
