--- a/web/templates/template.html
+++ b/web/templates/template.html
@@ -1,44 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-    <title>kv</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title></title>
+    <!-- Add to homescreen for Chrome on Android -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <link rel="icon" sizes="192x192" href="images/touch/chrome-touch-icon-192x192.png">
+    <!-- Add to homescreen for Safari on iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Material Design Lite">
+    <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
+    <!-- Tile icon for Win8 (144x144 + tile color) -->
+    <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
+    <meta name="msapplication-TileColor" content="#3372DF">
+    <!-- SEO: If your mobile URL is different from the desktop URL, add a canonical link to the desktop page https://developers.google.com/webmasters/smartphone-sites/feature-phones -->
+    <!--
+    <link rel="canonical" href="http://www.example.com/">
+    -->
     <!-- CSS  -->
     <link href="css/materialize.css" type="text/css" rel="stylesheet"/>
     <link href="css/material-icons.css" type="text/css" rel="stylesheet"/>
     <link href="css/style.css" type="text/css" rel="stylesheet"/>
+
+    <link rel="stylesheet" href="css/material.blue-red.min.css">
+    <link rel="stylesheet" href="css/material.style.css">
   </head>
-  <body>
-
-    <!-- Navbar -->
-    <div class="navbar-fixed">
-      <nav class="nav-wrapper blue-grey">
-        <div class="container">
-          <a id="logo-container" href="#" class="brand-logo">KEY VALUE</a>
-          <div class="right">
-            <a href="#" class="waves-effect waves-light deep-orange btn">login</a>
+  <body class="mdl-demo mdl-color--grey-100 mdl-color-text--grey-700 mdl-base">
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+      <header class="mdl-layout__header mdl-layout__header--scroll mdl-color--primary">
+          <div class="mdl-layout--large-screen-only mdl-layout__header-row">
+            <h3>KEYVALUE</h3>
           </div>
-          <ul class="right hide-on-med-and-down">
-            <li><a href="/docs/main">ABOUT</a></li>
-            <li><a href="/pricing">DOCUMENTATION</a></li>
-            <li><a href="/about">HELP</a></li>
-          </ul>
-          <ul id="nav-mobile" class="side-nav">
-            <li><a href="#">Navbar Link</a></li>
-            <a href="#" class="waves-effect waves-light btn">login</a>
-          </ul>
-          <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
-        </div>
-      </nav>
+          <div class="mdl-color--primary-dark">
+            <a href="home" class="mdl-layout__tab">Home</a>
+            <a href="account" class="mdl-layout__tab">Account</a>
+            <a href="projects" class="mdl-layout__tab">Projects</a>
+          </div>
+        </header>
+    
+
+      <!-- Container -->
+      <div class="mdl-layout__content">
+        <include href="{{ @content }}" />
+      </div><!-- Container - END -->
+
     </div>
-
-    <!-- Container -->
-    <div class="container">
-      <include href="{{ @content }}" />
-    </div><!-- Container - END -->
-
     <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/material.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="js/async.min.js"></script>
     <script type="text/javascript" src="js/api.js"></script>
