--- a/web/css/material.style.css
+++ b/web/css/material.style.css
@@ -14,195 +14,276 @@
  * limitations under the License.
  */
 
-html, body {
-  font-family: 'Roboto', 'Helvetica', sans-serif;
-  margin: 0;
-  padding: 0;
+html,
+body
+{
+    font-family: 'Roboto', 'Helvetica', sans-serif;
+
+    margin: 0;
+    padding: 0;
 }
-.mdl-demo .mdl-layout__header-row {
-  padding-left: 40px;
+.mdl-demo .mdl-layout__header-row
+{
+    padding-left: 40px;
 }
-.mdl-demo .mdl-layout.is-small-screen .mdl-layout__header-row h3 {
-  font-size: inherit;
+.mdl-demo .mdl-layout.is-small-screen .mdl-layout__header-row h3
+{
+    font-size: inherit;
 }
-.mdl-demo .mdl-layout__tab-bar-button {
-  display: none;
+.mdl-demo .mdl-layout__tab-bar-button
+{
+    display: none;
 }
-.mdl-demo .mdl-layout.is-small-screen .mdl-layout__tab-bar .mdl-button {
-  display: none;
+.mdl-demo .mdl-layout.is-small-screen .mdl-layout__tab-bar .mdl-button
+{
+    display: none;
 }
 .mdl-demo .mdl-layout:not(.is-small-screen) .mdl-layout__tab-bar,
-.mdl-demo .mdl-layout:not(.is-small-screen) .mdl-layout__tab-bar-container {
-  overflow: visible;
+.mdl-demo .mdl-layout:not(.is-small-screen) .mdl-layout__tab-bar-container
+{
+    overflow: visible;
 }
-.mdl-demo .mdl-layout__tab-bar-container {
-  height: 64px;
+.mdl-demo .mdl-layout__tab-bar-container
+{
+    height: 64px;
 }
-.mdl-demo .mdl-layout__tab-bar {
-  padding: 0;
-  padding-left: 16px;
-  box-sizing: border-box;
-  height: 100%;
-  width: 100%;
+.mdl-demo .mdl-layout__tab-bar
+{
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    padding-left: 16px;
 }
-.mdl-demo .mdl-layout__tab-bar .mdl-layout__tab {
-  height: 64px;
-  line-height: 64px;
+.mdl-demo .mdl-layout__tab-bar .mdl-layout__tab
+{
+    line-height: 64px;
+
+    height: 64px;
 }
-.mdl-demo .mdl-layout__tab-bar .mdl-layout__tab.is-active::after {
-  background-color: white;
-  height: 4px;
+.mdl-demo .mdl-layout__tab-bar .mdl-layout__tab.is-active::after
+{
+    height: 4px;
+
+    background-color: white;
 }
-.mdl-demo main > .mdl-layout__tab-panel {
-  padding: 8px;
-  padding-top: 48px;
+.mdl-demo main > .mdl-layout__tab-panel
+{
+    padding: 8px;
+    padding-top: 48px;
 }
-.mdl-demo .mdl-card {
-  height: auto;
-  display: flex;
-  flex-direction: column;
+.mdl-demo .mdl-card
+{
+    display: flex;
+    flex-direction: column;
+
+    height: auto;
 }
-.mdl-demo .mdl-card > * {
-  height: auto;
+.mdl-demo .mdl-card > *
+{
+    height: auto;
 }
-.mdl-demo .mdl-card .mdl-card__supporting-text {
-  margin: 40px;
-  flex-grow: 1;
-  padding: 0;
-  color: inherit;
-  width: calc(100% - 80px);
+.mdl-demo .mdl-card .mdl-card__supporting-text
+{
+    width: calc(100% - 80px);
+    margin: 40px;
+    padding: 0;
+
+    color: inherit;
+
+    flex-grow: 1;
 }
-.mdl-demo.mdl-demo .mdl-card__supporting-text h4 {
-  margin-top: 0;
-  margin-bottom: 20px;
+.mdl-demo.mdl-demo .mdl-card__supporting-text h4
+{
+    margin-top: 0;
+    margin-bottom: 20px;
 }
-.mdl-demo .mdl-card__actions {
-  margin: 0;
-  padding: 4px 40px;
-  color: inherit;
+.mdl-demo .mdl-card__actions
+{
+    margin: 0;
+    padding: 4px 40px;
+
+    color: inherit;
 }
-.mdl-demo .mdl-card__actions a {
-  color: #00BCD4;
-  margin: 0;
+.mdl-demo .mdl-card__actions a
+{
+    margin: 0;
 }
 .mdl-demo .mdl-card__actions a:hover,
-.mdl-demo .mdl-card__actions a:active {
-  color: inherit;
-  background-color: transparent;
+.mdl-demo .mdl-card__actions a:active
+{
+    color: inherit;
+    background-color: transparent;
 }
-.mdl-demo .mdl-card__supporting-text + .mdl-card__actions {
-  border-top: 1px solid rgba(0, 0, 0, 0.12);
+.mdl-demo .mdl-card__supporting-text + .mdl-card__actions
+{
+    border-top: 1px solid rgba(0, 0, 0, .12);
 }
-.mdl-demo #add {
-  position: absolute;
-  right: 40px;
-  top: 36px;
-  z-index: 999;
+.mdl-demo #add
+{
+    position: absolute;
+    z-index: 999;
+    top: 36px;
+    right: 40px;
 }
 
-.mdl-demo .mdl-layout__content section:not(:last-of-type) {
-  position: relative;
-  margin-bottom: 48px;
+.mdl-demo .mdl-layout__content section:not(:last-of-type)
+{
+    position: relative;
+
+    margin-bottom: 48px;
 }
-.mdl-demo section.section--center {
-  max-width: 860px;
+.mdl-demo section.section--center
+{
+    max-width: 860px;
 }
-.mdl-demo #features section.section--center {
-  max-width: 620px;
+.mdl-demo #features section.section--center
+{
+    max-width: 620px;
 }
-.mdl-demo section > header{
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.mdl-demo section > header
+{
+    display: flex;
+
+    align-items: center;
+    justify-content: center;
 }
-.mdl-demo section > .section__play-btn {
-  min-height: 200px;
+.mdl-demo section > .section__play-btn
+{
+    min-height: 200px;
 }
-.mdl-demo section > header > .material-icons {
-  font-size: 3rem;
+.mdl-demo section > header > .material-icons
+{
+    font-size: 3rem;
 }
-.mdl-demo section > button {
-  position: absolute;
-  z-index: 99;
-  top: 8px;
-  right: 8px;
+.mdl-demo section > button
+{
+    position: absolute;
+    z-index: 99;
+    top: 8px;
+    right: 8px;
 }
-.mdl-demo section .section__circle {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  flex-grow: 0;
-  flex-shrink: 1;
+.mdl-demo section .section__circle
+{
+    display: flex;
+
+    align-items: center;
+    justify-content: flex-start;
+    flex-grow: 0;
+    flex-shrink: 1;
 }
-.mdl-demo section .section__text {
-  flex-grow: 1;
-  flex-shrink: 0;
-  padding-top: 8px;
+.mdl-demo section .section__text
+{
+    padding-top: 8px;
+
+    flex-grow: 1;
+    flex-shrink: 0;
 }
-.mdl-demo section .section__text h5 {
-  font-size: inherit;
-  margin: 0;
-  margin-bottom: 0.5em;
+.mdl-demo section .section__text h5
+{
+    font-size: inherit;
+
+    margin: 0;
+    margin-bottom: .5em;
 }
-.mdl-demo section .section__text a {
-  text-decoration: none;
+.mdl-demo section .section__text a
+{
+    text-decoration: none;
 }
-.mdl-demo section .section__circle-container > .section__circle-container__circle {
-  width: 64px;
-  height: 64px;
-  border-radius: 32px;
-  margin: 8px 0;
+.mdl-demo section .section__circle-container > .section__circle-container__circle
+{
+    width: 64px;
+    height: 64px;
+    margin: 8px 0;
+
+    border-radius: 32px;
 }
-.mdl-demo section.section--footer .section__circle--big {
-  width: 100px;
-  height: 100px;
-  border-radius: 50px;
-  margin: 8px 32px;
+.mdl-demo section.section--footer .section__circle--big
+{
+    width: 100px;
+    height: 100px;
+    margin: 8px 32px;
+
+    border-radius: 50px;
 }
-.mdl-demo .is-small-screen section.section--footer .section__circle--big {
-  width: 50px;
-  height: 50px;
-  border-radius: 25px;
-  margin: 8px 16px;
+.mdl-demo .is-small-screen section.section--footer .section__circle--big
+{
+    width: 50px;
+    height: 50px;
+    margin: 8px 16px;
+
+    border-radius: 25px;
 }
-.mdl-demo section.section--footer {
-  padding: 64px 0;
-  margin: 0 -8px -8px -8px;
+.mdl-demo section.section--footer
+{
+    margin: 0 -8px -8px -8px;
+    padding: 64px 0;
 }
-.mdl-demo section.section--center .section__text:not(:last-child) {
-  border-bottom: 1px solid rgba(0,0,0,.13);
+.mdl-demo section.section--center .section__text:not(:last-child)
+{
+    border-bottom: 1px solid rgba(0,0,0,.13);
 }
-.mdl-demo .mdl-card .mdl-card__supporting-text > h3:first-child {
-  margin-bottom: 24px;
+.mdl-demo .mdl-card .mdl-card__supporting-text > h3:first-child
+{
+    margin-bottom: 24px;
 }
-.mdl-demo .mdl-layout__tab-panel:not(#overview) {
-  background-color: white;
+.mdl-demo .mdl-layout__tab-panel:not(#overview)
+{
+    background-color: white;
 }
-.mdl-demo #features section {
-  margin-bottom: 72px;
+.mdl-demo #features section
+{
+    margin-bottom: 72px;
 }
-.mdl-demo #features h4, #features h5 {
-  margin-bottom: 16px;
+.mdl-demo #features h4,
+#features h5
+{
+    margin-bottom: 16px;
 }
-.mdl-demo .toc {
-  border-left: 4px solid #C1EEF4;
-  margin: 24px;
-  padding: 0;
-  padding-left: 8px;
-  display: flex;
-  flex-direction: column;
+.mdl-demo .toc
+{
+    display: flex;
+    flex-direction: column;
+
+    margin: 24px;
+    padding: 0;
+    padding-left: 8px;
+
+    border-left: 4px solid #c1eef4;
 }
-.mdl-demo .toc h4 {
-  font-size: 0.9rem;
-  margin-top: 0;
+.mdl-demo .toc h4
+{
+    font-size: .9rem;
+
+    margin-top: 0;
 }
-.mdl-demo .toc a {
-  color: #4DD0E1;
-  text-decoration: none;
-  font-size: 16px;
-  line-height: 28px;
-  display: block;
+.mdl-demo .toc a
+{
+    font-size: 16px;
+    line-height: 28px;
+
+    display: block;
+
+    text-decoration: none;
+
+    color: #4dd0e1;
 }
-.mdl-demo .mdl-menu__container {
-  z-index: 99;
+.mdl-demo .mdl-menu__container
+{
+    z-index: 99;
+}
+
+#create-project-modal
+{
+    position: fixed;
+    z-index: 100;
+    top: 0;
+    left: 0;
+
+    display: none;
+
+    width: 100%;
+    height: 100%;
+
+    background: #000;
 }
