--- a/web/templates/projects.html
+++ b/web/templates/projects.html
@@ -1,16 +1,13 @@
 <div class="fixed-action-btn" style="bottom: 45px; right: 48px;">
-  <a class="btn-floating btn-large deep-orange tooltipped modal-trigger" data-position="left" data-delay="50" data-tooltip="CREATE NEW PROJECT" href="#modal1">
-    <i class="large material-icons">mode_edit</i>
-  </a>
-  <!-- <ul>
-    <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></i></a></li>
-    <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
-    <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
-    <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
-  </ul> -->
+  <button id="create-project-button" href="#create-project-modal" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored mdl-button--raised">
+    <i class="material-icons">mode_edit</i>
+  </button>
+  <div class="mdl-tooltip" for="create-project-button">
+      Create new project
+  </div>
 </div>
 <!-- Modal Structure -->
-<div id="modal1" class="modal">
+<div id="create-project-modal" class="modal">
   <div class="modal-content">
     <form id="create" method="post">
       <h5>CREATE NEW PROJECT</h5>
@@ -35,7 +32,6 @@
     </form>
   </div>
 </div>
-<div class="section">
-  <div id="projects" class="row">
-  </div>
+<div id="projects" class=" mdl-grid">
+    
 </div>
