--- a/web/templates/template.html
+++ b/web/templates/template.html
@@ -51,7 +51,7 @@
     </div>
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/material.min.js"></script>
-    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script type="text/javascript" src="js/vendor/jquery.leanModal.min.js"></script>
     <script type="text/javascript" src="js/async.min.js"></script>
     <script type="text/javascript" src="js/api.js"></script>
     <script type="text/javascript" src="js/handlebars.js"></script>
